--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,12 @@
         </header>
         <main class="content indent__content">
           <section class="profile indent__profile">
-            <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Фотография профиля">
+            <button type="button" class="button__avatar button_type_avatar-profile">
+              <img class="profile__avatar" src="" alt="Фотография профиля">
+            </button>
             <div class="profile__info">
-              <h1 class="profile__info-title">Жак-Ив Кусто</h1>
-              <p class="profile__info-subtitle">Исследователь океана</p>
+              <h1 class="profile__info-title"></h1>
+              <p class="profile__info-subtitle"></p>
               <button type="button" class="button button_type_edit-profile" aria-label="Редактировать"></button>
             </div>
             <button type="submit" class="button button-submit button_type_add-profile" aria-label="Добавить"></button>
@@ -59,6 +61,28 @@
             </form>
           </div>
         </div>
+        <div class="popup popup_type_avatar popup_theme_light">
+          <button type="button" class="button popup__close button_style_close" aria-label="Закрыть"></button>
+          <div class="popup__container">
+            <h2 class="popup__title">Обновить аватар</h2>
+            <form name="avatar-form" class="form form_avatar" novalidate>
+              <fieldset class="popup__contact">
+                <input id="url-avatar" type="url" name="link" required placeholder="Ссылка на аватар" class="popup__input popup__input_foto_link">
+                <div class="indent__span"><span class="span span_url-avatar"></span></div>
+              </fieldset>
+              <button type="submit" class="button button-submit button_type_save-avatar button_style_save button_style_save-avatar">Сохранить</button>
+            </form>
+          </div>
+        </div>
+        <div class="popup popup_type_delete popup_theme_light">
+          <button type="button" class="button popup__close button_style_close" aria-label="Закрыть"></button>
+          <div class="popup__container">
+            <h2 class="popup__title popup__title_delete">Вы уверены?</h2>
+            <form name="avatar-form" class="form form_avatar" novalidate>
+              <button type="submit" class="button button_type_delete button_style_save button_style_delete">Да</button>
+            </form>
+          </div>
+        </div>
         <div class="popup popup_type_image popup_theme_dark">
           <button type="button" class="button popup__close button_style_close" aria-label="Закрыть"></button>
           <figure class="popup__image-container">
@@ -73,6 +97,7 @@
           <div class="card__caption">
             <h2 class="card__text"></h2>
             <button type="button" class="button button_type_like-card" aria-label="Поставить лайк"></button>
+            <p class="card__like-counter"></p>
           </div>
           <button type="button" class="button button_type_delete-card" aria-label="Удалить фотографию"></button>
         </article>
