--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <main class="content indent__content">
           <section class="profile indent__profile">
             <button type="button" class="button__avatar button_type_avatar-profile">
-              <img class="profile__avatar" src="" alt="Фотография профиля">
+              <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Фотография профиля">
             </button>
             <div class="profile__info">
               <h1 class="profile__info-title"></h1>
