--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
         </header>
         <main class="content indent__content">
           <section class="profile indent__profile">
-            <button type="button" class="button button__avatar button_type_avatar-profile">
-              <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="Фотография профиля">
+            <button type="button" class="button button_avatar button_type_avatar-profile">
+              <img class="profile__avatar" src="<%=require('./images/avatar.svg')%>" alt="Фотография профиля">
             </button>
             <div class="profile__info">
               <h1 class="profile__info-title"></h1>
